<resources>
    <string name="app_name">StockingSql</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="caracter_sticas">Características:</string>
    <string name="navegaci_n_entre_las_diferentes_secciones_de_la_aplicaci_n">- Navegación entre las diferentes secciones de la aplicación.</string>
    <string name="acceso_r_pido_a_funciones_clave">- Acceso rápido a funciones clave.</string>
    <string name="productos">Productos</string>
    <string name="proveedores">Proveedores</string>
    <string name="categor_as">Categorías</string>
    <string name="movimientos">Movimientos</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nuevo_almac_n">Nuevo Almacén</string>
    <string name="editar">Editar</string>
    <string name="lista_de_almacenes_con_opciones_de_creaci_n_edici_n_y_eliminaci_n">- Lista de almacenes con opciones de creación, edición y eliminación.</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_categor_a">Nueva Categoría</string>
    <string name="men_principal">Menú principal:</string>
    <string name="almacenes">Almacenes</string>
    <string name="gestionar_categor_as">Gestionar Categorías</string>
    <string name="gestionar_productos">Gestionar Productos</string>
    <string name="gestionar_almacenes">Gestionar Almacenes</string>
    <string name="gestionar_movimientos">Gestionar Movimientos</string>
    <string name="gestionar_proveedores">Gestionar Proveedores</string>
    <string name="agregar_almac_n">Agregar Almacén</string>
    <string name="editar_almac_n">Editar Almacén</string>
    <string name="eliminar_almac_n">Eliminar Almacén</string>
    <string name="nombre_del_almac_n">Nombre del Almacén</string>
    <string name="ubicaci_n_del_almac_n">Ubicación del Almacén</string>
    <string name="nombre_del_proveedor">Nombre del proveedor</string>
    <string name="guardar_proveedor">Guardar proveedor</string>
    <string name="ubicaci_n_del_proveedor">Ubicación del proveedor</string>
    <string name="actualizar_proveedor">Actualizar proveedor</string>
    <string name="warehouse_name">Warehouse Name</string>
    <string name="warehouse_location">Warehouse Location</string>
    <string name="editar_proveedor">Editar Proveedor</string>
    <string name="nuevo_proveedor">Nuevo Proveedor</string>
    <string name="eliminar_proveedor">Eliminar Proveedor</string>
    <string name="contacto_del_proveedor">Contacto del proveedor</string>
    <string name="email_del_proveedor">Email del proveedor</string>
    <string name="contacto">Contacto</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="ingrese_el_nombre_del_proveedor">Ingrese el nombre del proveedor</string>
    <string name="ingrese_el_contacto_del_proveedor">Ingrese el contacto del proveedor</string>
    <string name="ingrese_el_tel_fono_del_proveedor">Ingrese el teléfono del proveedor</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="ingrese_el_email_del_proveedor">Ingrese el email del proveedor</string>
    <string name="tel_fono_del_proveedor">Teléfono del Proveedor</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="proveedor">Proveedor</string>
    <string name="mp">MP</string>
    <string name="product_id">Product ID</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="stock">Stock</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="category_id">Category ID</string>
    <string name="categor_a_id">Categoría ID</string>
    <string name="supplier_id">Supplier ID</string>
    <string name="nuevo_producto">Nuevo Producto</string>
    <string name="editar_producto">Editar</string>
    <string name="eliminar_producto">Eliminar</string>
    <string name="guardar_producto">Guardar</string>
    <string name="buscar_categor_as">Buscar categorías</string>


</resources>
